[package]
name = "samplify-rs"
version = "0.1.7"
edition = "2021"
exclude = [".DS_Store", "/target", ".vscode"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "A procedural macro to generate sample data for Rust structs."
readme = "README.md"
homepage = "https://github.com/Open-Payments/samplify-rs"
repository = "https://github.com/Open-Payments/samplify-rs"
keywords = ["sample", "generator", "Mock", "Testing", "Data"]
categories = ["data-structures", "development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
rust_decimal = { version = "1" }
bigdecimal-rs = { version = "0.4", package = "bigdecimal" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
fake = { version = "2.8", features = ["derive", "chrono", "uuid", "rust_decimal", "bigdecimal", "chrono", "http", "geo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
